@@ -288,8 +288,8 @@ function gv_misc_menu() {
 function gv_misc_file_insert($file) {
   
   $file_data = print_r($file, TRUE);
-  gv_misc_sendMessage('new_file_was_uploaded', array('report' => 'new file in file_insert ' . $file_data));
-  dpm('new_file_was_uploaded '. $file->uri);
+  //gv_misc_sendMessage('new_file_was_uploaded', array('report' => 'new file in file_insert ' . $file_data));
+  //dpm('new_file_was_uploaded '. $file->uri);
   // Write to log.file
   //exec('echo "$(date ' . "'+%Y-%m-%d %H:%M:%S'" . ') ---->UPLOAD--->'. escapeshellarg($file->uri) . '" >>~/gv_image_optimize.log');
   
@@ -373,12 +373,8 @@ function gv_misc_imageOptimizeOnServer($file) {
       break;
 
     case 'image/jpeg':
-      gv_misc_sendMessage('new_file_was_uploaded', array('report' => 'going to optimize JPEG dst: ' . $dst));
       if ($cmd = variable_get('imageapi_optimize_jpegtran', '')) { // /usr/bin/jpegtran, should be installed in system
         _imageapi_optimize_exec("$cmd -copy none -optimize -progressive ". escapeshellarg($dst), $dst);
-        gv_misc_sendMessage('new_file_was_uploaded', array('report' => 'optimized JPEG dst: ' . $dst));
-        drupal_set_message('Optimized jpeg ' . $dst, 'warning');
-        dpm('Optimized jpeg ' . $dst);
       }
       if ($cmd = variable_get('imageapi_optimize_jfifremove', '')) {
         _imageapi_optimize_exec("$cmd < ". escapeshellarg($dst), $dst);
